[tool.poetry]
name = "cartographer"
version = "0.1.0"
description = "Cartographer: A Desktop Data Modeling &amp; Analytics IDE"
authors = ["Joshua Spratt <jspratt02@icloud.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
